objects/ASI_CRM_PromoterCheckInOut__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CheckInOut__c</fullName>
        <label>Check In / Out</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DeviceId__c</fullName>
        <label>Device Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DeviceType__c</fullName>
        <label>Device Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <label>Outlet</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Promoter Check In / Outs</relationshipLabel>
        <relationshipName>ASI_CRM_PromoterCheckInOut_Outlet</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PGLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_PromoterCheckInOut_PGLead_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoter</label>
        <referenceTo>ASI_CRM_Promoter__c</referenceTo>
        <relationshipLabel>Promoter Check In / Outs</relationshipLabel>
        <relationshipName>ASI_CRM_PromoterCheckInOut_Promoter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_StagingDateTime__c</fullName>
        <label>Staging DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubmitDateTime__c</fullName>
        <label>Submit DateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Promoter Check In/Out</label>
    <listViews>
        <fullName>All_VN_Promoter_Check_In_Outs</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Promoter__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_PGLeader__c</columns>
        <columns>ASI_CRM_CheckInOut__c</columns>
        <columns>ASI_CRM_DateTime__c</columns>
        <columns>ASI_CRM_DeviceId__c</columns>
        <columns>ASI_CRM_DeviceType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_PromoterCheckInOut__c.ASI_CRM_VN_PromoterCheckInOut</value>
        </filters>
        <label>All VN Promoter Check In/Outs</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PCIO-{0000}</displayFormat>
        <label>Promoter Check In/Out No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promoter Check In/Outs</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_PromoterCheckInOut</fullName>
        <active>true</active>
        <label>VN Promoter Check In/Out</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>